templates/smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  ports:
    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev
  labels:
    app: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - name: smtp4dev
          image: rnwood/smtp4dev:3.1.3-ci20211206101
          ports:
            - containerPort: 80
            - containerPort: 25
