templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smtp4dev
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
        - pathType: Prefix
          path: /mail
          backend:
            service:
              name: smtp4dev
              port:
                number: 80
